<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameDialogInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter new username"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameDialogEditText">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>