...
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorProfileBackground"
            android:clickable="false"
            android:src="@drawable/ic_profile_button_96dp"
            app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75">

        </ImageButton>
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589">
        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editUserNameButton"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:textSize="11sp"
            android:text="Edit"
            android:backgroundTint="@color/colorButton"
            app:layout_constraintEnd_toEndOf="parent"
...
