<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemListProfileButton"
        android:icon="@drawable/ic_profile_button_36dp"
        android:title="Profile"
        android:contentDescription="View Profile"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        >
    </item>
</menu>